--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TPO Grupo 18</title>
-</head>
-<body>
-    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&family=Rubik+Iso&family=Yanone+Kaffeesatz&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navBar">
+        <div class="menu" id="barramenu">
+          <ul class="menubar">
+            <li><h4>MENU</h4></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="">Skills</a></li>
+            <li><a href="">Proyecto</a></li>
+            <li><a href="">Contacto</a></li>
+          </ul>
+        </div>
+        <div class="menu" id="nombre">nombre compañía</div>
+        <div class="menu" id="logo">
+          <img src="./img/Logo.png" alt="Logo Compañía" id="logoCia" />
+        </div>
+      </nav>
+    </header>
+    <main class="principal">
+      <section id="loginRegister">section</section>
+      <aside id="offers">aside</aside>
+    </main>
+    <footer class="piePagina">
+      <div>footer</div>
+    </footer>
+  </body>
 </html>
