--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body onload="incorporoImg()">
+  <body >
     <header>
       <nav class="navBar">
         <img src="./img/Logo.png" alt="Logo Compañía" id="logoCia" />
@@ -33,25 +33,30 @@
       </nav>
     </header>
     <main class="principal">
+      <button id="btn">Presione</button>
+      <div>
+        <img src="https://i.imgur.com/Y5gHJMd.jpeg" " alt="fff">
+      </div>
       <div
         id="carouselExampleSlidesOnly"
         class="carousel slide"
         data-bs-ride="carousel"
       >
         <div class="carousel-inner" id="carousel-ofertas" >
-          <!-- <div class="carousel-item active">
-            <img src="./img/Logo.png" class="d-block w-100" alt="..." />
-          </div>
-          <div class="carousel-item active">
-            <img src="./img/Logo.png" class="d-block w-100" alt="..." />
-          </div>
-          <div class="carousel-item active">
+          <!--  <div class="carousel-item active">
+            <img src="https://i.imgur.com/Y5gHJMd.jpeg" class="d-block w-100" alt="..." />
+          </div>-->
+         <!-- <div class="carousel-item active">
+            <img src="./img/Logo.png" class="d-block w-40" alt="..." />
+          </div> -->
+         <!-- <div class="carousel-item active">
             <img
               src="https://i.imgur.com/Dm2pPfd.jpeg"
               class="d-block w-100"
               alt="..."
             />
           </div> -->
+          
         </div>
       </div>
     </main>
