--- a/index.html
+++ b/index.html
@@ -32,30 +32,15 @@
         </ul>
       </nav>
     </header>
-    <main class="principal">
+    <main class="principal" id="principal">
       <button id="btn">Presione</button>
-      <div>
-        <img src="https://i.imgur.com/Y5gHJMd.jpeg" " alt="fff">
-      </div>
+      
       <div
         id="carouselExampleSlidesOnly"
         class="carousel slide"
         data-bs-ride="carousel"
       >
         <div class="carousel-inner" id="carousel-ofertas" >
-          <!--  <div class="carousel-item active">
-            <img src="https://i.imgur.com/Y5gHJMd.jpeg" class="d-block w-100" alt="..." />
-          </div>-->
-         <!-- <div class="carousel-item active">
-            <img src="./img/Logo.png" class="d-block w-40" alt="..." />
-          </div> -->
-         <!-- <div class="carousel-item active">
-            <img
-              src="https://i.imgur.com/Dm2pPfd.jpeg"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div> -->
           
         </div>
       </div>
@@ -73,6 +58,8 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+   
     <script src="./javascript/getApi.js"></script>
+    <script src="./javascript/constantes.js"></script>
   </body>
 </html>
