--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body >
     <header>
       <nav class="navBar">
-        <img src="./img/Logo.png" alt="Logo Compañía" id="logoCia" />
+        <img src="./img/cocktail.jpg" alt="Logo Compañía" id="logoCia" />
         <h1>Nombre Compañía</h1>
         <ul class="menubar">
           <!-- <li><h4>MENU</h4></li> -->
@@ -33,8 +33,8 @@
       </nav>
     </header>
     <main class="principal" id="principal">
-      <button id="btn">Presione</button>
-      
+   
+      <section id="imagenes">
       <div
         id="carouselExampleSlidesOnly"
         class="carousel slide"
@@ -44,7 +44,12 @@
           
         </div>
       </div>
+      </section>
+      <aside>
+        prueba aside
+      </aside>
     </main>
+   
     <footer class="piePagina">
       <div>footer</div>
     </footer>
