Agrega otras APIs

--- a/index copy.html
+++ b/index copy.html
@@ -42,7 +42,9 @@
           <div class="carousel-inner" id="carousel-ofertas"></div>
         </div>
       </section>
-      <aside id="aside1"></aside>
+      <aside id="aside1">
+        
+      </aside>
     </main>
 
     <footer class="piePagina">
@@ -59,10 +61,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- <script src="./javascript/operaciones.js"></script>
+    <script src="./javascript/operaciones.js"></script>
     <script src="./javascript/getApi.js"></script>
-    <script src="./javascript/constantes.js"></script> -->
-    <!-- <script src="./javascript/apiResto.js"></script> -->
-   <script src="./javascript/apiNews.js"></script>
+    <script src="./javascript/constantes.js"></script>
   </body>
 </html>
