--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <div class="container" id="informacion">
           <h2 id="aside-contenidoInicial">Información General</h2>
           <span id="aside-span">
-            Este es un portal para consultar las películas y series preferidas
+            Este es un portal para consultar sus películas y series preferidas.
+            <br />
+            <br />Ingrese o Regístrese para visualizar el contenido.
           </span>
         </div>
       </aside>
@@ -55,5 +57,8 @@
 
     <script src="./js/omdb.js"></script>
     <script src="./js/modelado.js"></script>
+    <script src="./js/loginRegister.js"></script>
+  
+  
   </body>
 </html>
