agregar logica de ingreso y registro

--- a/infoVideos.html
+++ b/infoVideos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TPO Grupo 18 - Index</title>
+    <title>TPO Grupo 18 - InfoVideos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,25 +24,7 @@
       <nav class="navBar"></nav>
     </header>
     <main class="principal" id="principal">
-      <div
-        id="carouselExampleSlidesOnly"
-        class="carousel slide"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-inner" id="carousel-examples"></div>
-      </div>
-
-      <aside id="aside1">
-        <div class="container" id="informacion">
-          <h2 id="aside-contenidoInicial">Información General</h2>
-          <span id="aside-span">
-            Este es un portal para consultar sus películas y series preferidas.
-            <br />
-            <br />Ingrese o Regístrese para visualizar el contenido.
-          </span>
-        </div>
-    
-      </aside>
+      
     </main>
 
     <footer class="piePagina" id="piePag"></footer>
@@ -59,7 +41,7 @@
 
     <script src="./js/omdb.js"></script>
     <script src="./js/modelado.js"></script>
-    <script src="./js/login.js"></script>
+    <script src="./js/loginRegister.js"></script>
   
   
   </body>
