--- a/infoVideos.html
+++ b/infoVideos.html
@@ -17,14 +17,39 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
   </head>
   <body>
     <header>
       <nav class="navBar"></nav>
     </header>
-    <main class="principal" id="principal">
-      
+    <main class="infoVideo" id="infoVideos">
+      <div id="contenedor" class="container">
+      <div id="busquedaTitulo">
+        
+        <input type="text" id="busqueda" name="buscar" placeholder="buscar" />
+        <button id="buscar">Buscar</button>
+      </div>
+      <table>
+        <thead>
+          <tr>
+            <th>Encabezado 1</th>
+            <th>Encabezado 2</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Dato 1</td>
+            <td>Dato 2</td>
+          </tr>
+          <tr>
+            <td>Dato 3</td>
+            <td>Dato 4</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+      <aside id="aside1">aside</aside>
     </main>
 
     <footer class="piePagina" id="piePag"></footer>
@@ -41,8 +66,6 @@
 
     <script src="./js/omdb.js"></script>
     <script src="./js/modelado.js"></script>
-    <script src="./js/loginRegister.js"></script>
-  
-  
+    <!-- <script src="./js/loginRegister.js"></script> -->
   </body>
 </html>
