--- a/infoVideos.html
+++ b/infoVideos.html
@@ -73,6 +73,7 @@
 
     <script src="./js/omdb.js"></script>
     <script src="./js/modelado.js"></script>
+    <script src="./js/videos.js"></script>
     <!-- <script src="./js/loginRegister.js"></script> -->
   </body>
 </html>
