Depura codigo y organiza js

--- a/infoVideos.html
+++ b/infoVideos.html
@@ -26,12 +26,12 @@
     <main class="infoVideo" id="infoVideos">
       <div id="contenedor" class="container">
         <div id="busquedaTitulo">
-          <label for="busqueda">Buscar Título</label>
+          <label for="busqueda" id="labelBusqueda">Buscar Título</label>
           <input
             type="text"
             id="busqueda"
             name="buscar"
-            placeholder="buscar - mínimo 3 letras"
+            placeholder="mínimo 3 letras"
           />
         </div>
         <table>
@@ -55,6 +55,7 @@
         <div>
           <p id="genre"></p>
           <p id="elenco"></p>
+          <p id="resumen"></p>
         </div>
       </aside>
     </main>
