--- a/infoVideos.html
+++ b/infoVideos.html
@@ -46,17 +46,19 @@
           </thead>
           <tbody id="tbody-table"></tbody>
         </table>
-
-        <!-- <button id="">Buscar</button> -->
       </div>
       <aside id="aside2">
-        <h3 id="titpeli"></h3>
-        <div id="imgPeli"></div>
-        <div>
-          <p id="genre"></p>
-          <p id="elenco"></p>
-          <p id="resumen"></p>
+        <h4 id="titpeli"></h4>
+        <div id="centroAside2">
+          <div id="imgPeli"></div>
+          <div id="info">
+            <p id="anio"></p>
+            <p id="valueIMDB"></p>
+          </div>
         </div>
+        <p id="genre"></p>
+        <p id="elenco"></p>
+        <p id="resumen"></p>
       </aside>
     </main>
 
@@ -75,6 +77,5 @@
     <script src="./js/omdb.js"></script>
     <script src="./js/modelado.js"></script>
     <script src="./js/videos.js"></script>
-    <!-- <script src="./js/loginRegister.js"></script> -->
   </body>
 </html>
