Correccion nombre css

--- a/alquilarPeliculas.html
+++ b/alquilarPeliculas.html
@@ -37,11 +37,11 @@
         <table>
           <thead>
             <tr>
-              <th id="th-titulo">Título</th>
-              <th id="th-anio">Año</th>
-              <th id="th_califIMDB">IMDB ID</th>
-              <th id="th-tipo">Tipo</th>
-              <th id="th-detalle"></th>
+              <th>Título</th>
+              <th>Año</th>
+              <th>IMDB ID</th>
+              <th>Tipo</th>
+              <th></th>
             </tr>
           </thead>
           <tbody id="tbody-table"></tbody>
@@ -54,6 +54,7 @@
           <div id="info">
             <p id="anio"></p>
             <p id="valueIMDB"></p>
+            <p id="precio"></p>
           </div>
         </div>
         <p id="genre"></p>
