Comenzar armar página de alquiler

--- a/html/alquilarPeliculas.html
+++ b/html/alquilarPeliculas.html
@@ -34,17 +34,17 @@
             placeholder="mínimo 3 letras"
           />
         </div>
-        <table>
-          <thead>
+        <table id="tablaAlquilar">
+          <thead id="tablaAlquilar">
             <tr>
-              <th>Título</th>
-              <th>Año</th>
-              <th>IMDB ID</th>
-              <th>Tipo</th>
-              <th></th>
+              <th id="tablaAlquilar">Título</th>
+              <th id="tablaAlquilar">Año</th>
+              <th id="tablaAlquilar">IMDB ID</th>
+              <th id="tablaAlquilar">Tipo</th>
+              <th id="tablaAlquilar"></th>
             </tr>
           </thead>
-          <tbody id="tbody-table"></tbody>
+          <tbody id="tbody-table" ></tbody>
         </table>
       </div>
       <aside id="aside2">
@@ -55,6 +55,7 @@
             <p id="anio"></p>
             <p id="valueIMDB"></p>
             <p id="precio"></p>
+            <p id="botonAlquilar"></p>
           </div>
         </div>
         <p id="genre"></p>
