generar formulario de pago

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
   </head>
   <body>
     <header>
@@ -34,14 +34,15 @@
 
       <aside id="aside1">
         <div class="container" id="informacion">
-          <h2 id="aside-contenidoInicial">Información General</h2>
+          <h2 id="aside-contenidoInicial" >Información General</h2>
           <span id="aside-span">
             Este es un portal para consultar sus películas y series preferidas.
+            <br />
+            <br />También puede alquilar películas vía Streaming
             <br />
             <br />Ingrese o Regístrese para visualizar el contenido.
           </span>
         </div>
-    
       </aside>
     </main>
 
@@ -60,7 +61,5 @@
     <script src="./js/omdb.js"></script>
     <script src="./js/modelado.js"></script>
     <script src="./js/login.js"></script>
-  
-  
   </body>
 </html>
