Mejorar visual poster y factor por antigüedad

--- a/html/infoVideos.html
+++ b/html/infoVideos.html
@@ -57,6 +57,8 @@
           </div>
         </div>
         <p id="genre"></p>
+        <p id="pais"></p>
+        <p id="director"></p>
         <p id="elenco"></p>
         <p id="resumen"></p>
       </aside>
