--- a/html/alquilarPeliculas.html
+++ b/html/alquilarPeliculas.html
@@ -59,6 +59,8 @@
           </div>
         </div>
         <p id="genre"></p>
+        <p id="pais"></p>
+        <p id="director"></p>
         <p id="elenco"></p>
         <p id="resumen"></p>
       </aside>
