Agregar iframe en index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <aside id="aside1">
         <div class="container" id="informacion">
-          <h2 id="aside-contenidoInicial" >Información General</h2>
+          <h2 id="aside-contenidoInicial">Información General</h2>
           <span id="aside-span">
             Este es un portal para consultar sus películas y series preferidas.
             <br />
@@ -42,6 +42,17 @@
             <br />
             <br />Ingrese o Regístrese para visualizar el contenido.
           </span>
+        </div>
+        <div class="container" id="peliculaMuestra">
+          <iframe
+            width="500"
+            height="270"
+            src="https://www.youtube-nocookie.com/embed/OsaphlwhhmY?si=4bYERBqa_zMt9wh3&amp;start=5&autoplay=1&amp;loop=1&amp;playlist=bLvqoHBptjg"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
         </div>
       </aside>
     </main>
