--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
             <br />Ingrese o Regístrese para visualizar el contenido.
           </span>
         </div>
-        <div class="container" id="peliculaMuestra">
+        <div class="container contenedor" id="peliculaMuestra">
           <iframe
+            id="forrest"
             width="500"
             height="270"
             src="https://www.youtube-nocookie.com/embed/OsaphlwhhmY?si=4bYERBqa_zMt9wh3&amp;start=5&autoplay=1&amp;loop=1&amp;playlist=bLvqoHBptjg"
